# SalmID

./: LICENSE  README.md  SalmID.py  pyproject.toml  version.py
SalmID/: SalmID.py  invA_mers_dict
salmid/: core.py  version.py
