[tool.poetry]
name = "salmid"
version = "0.1.23"
description = "Rapid tool to check taxonomic ID of single isolate samples. Currently only IDs Salmonella species and subspecies, and some common contaminants (Listeria, Escherichia)."
authors = ["Henk den Bakker <hcd82599@uga.edu>"]
license = "MIT"
include = [ 'salmid/invA_mers_dict', 'salmid/rpoB_mers_dict' ]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
'SalmID.py' = 'salmid.core:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
